--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,15 @@
 :root {
   --bg: #0d0c22;
+  --bgSoft: #2d2b42;
   --text: white;
+  --textSoft: #e5e5e5;
+  --btn: #3673fd;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
